--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
-	"appid": "wx22d65ca900faba73",
+	"appid": "wx450c25619297b6e8",
 	"projectname": "%E6%8B%BF%E5%91%97",
 	"isGameTourist": false,
 	"condition": {
